# RoboticsStudy

./: .gitignore  .gitmodules  LICENSE  README.md  run_env.bat  run_env.sh
Basic/: 00_roadmap.ipynb  01_robotics_math.ipynb  02_perception_sensors_cv.ipynb  03_slam_localization_mapping.ipynb  04_ros2_robot_systems.ipynb  05_simulation_isaac_sim.ipynb  06_vlm_vla_robot_learning.ipynb  07_learning_roadmap_map.ipynb  08_moveit2_manipulation.ipynb  09_omx_imitation_learning.ipynb  10_vision_llm_integration.ipynb  11_mvp_integration_project.ipynb  12_full_course_deep_dive.ipynb  13_edge_device_practical_labs.ipynb  README.md
Basic/papers/: README.md  attention_is_all_you_need.md  clip.md  isaac_sim_docs.md  orb_slam.md  palm_e.md  probabilistic_robotics.md  rt1.md  rt2.md
ETC/: .gitignore  README.md  pyproject.toml
ETC/tech/: Blob.md  (+1 more)
ImageDetect/: README.md  requirements-rtdetr.txt  requirements.txt
OpenCV/: 01.Chap01.md
OpenCVStudyForDotnet/: .gitignore  README.md
OpenCVStudyForPython/: .gitignore  README.md  main.py  pyproject.toml
ROS/: README.md
ROS/projects/02_python_nodes_ws/ros2_ws/src/hello_robot_py/: package.xml  setup.cfg  setup.py
ROS/projects/02_python_nodes_ws/ros2_ws/src/hello_robot_py/hello_robot_py/: __init__.py  hello_publisher.py  hello_subscriber.py  parameter_timer.py
ROS/projects/02_python_nodes_ws/ros2_ws/src/hello_robot_py/launch/: bringup.launch.py
ROS/projects/02_python_nodes_ws/ros2_ws/src/hello_robot_py/resource/: hello_robot_py
Research/: 2026-06-30_VLM_Trend_UnlimitedOCR.md  README.md
environment/: README.md  launch.json
(+177 files in other folders)
